--- a/src/Home/sliderProducts/SliderProductsBox.css
+++ b/src/Home/sliderProducts/SliderProductsBox.css
@@ -39,4 +39,14 @@
     .productsBox {
         height: 100vh;
     }
+    .backgroundBoxR,
+    .backgroundBoxL{
+        width: 50%;
+    }
+}
+@media only screen and (max-width: 800px){
+    .sliderProduct_Info p,
+    .sliderProduct_Info a {
+        font-size: 0.8rem;
+    }
 }
