--- a/src/Home/slider/Slider.scss
+++ b/src/Home/slider/Slider.scss
@@ -197,3 +197,121 @@ $--color-03: rgb(127,92,120);
         font-size: 1.3rem;
     }
 }
+@media only screen and (max-width: 600px){
+    .swiper .slider_info_img {
+        height: 180px;
+    }
+    .swiper-pagination{
+        right: 12px;
+    }
+    .swiper-button-next {
+        right: -8px !important;
+    }
+    .swiper-button-prev{
+        right: 20px !important;
+    }
+    .swiper .slider_info_text_button .infoBoutton{
+        margin-left: 1.5rem !important;
+    }
+}
+@media only screen and (max-width: 500px){
+    .swiper-pagination{
+        flex-direction: row;
+        justify-content: center;
+        height: 10%;
+        bottom: 38px !important;
+        top: auto;
+        right: 0px;
+        .swiper-pagination-bullet{
+            margin-left: 20px !important;
+            width: 7px;
+            height: 7px;
+            &:first-child{
+                margin-left: 0px !important;
+            }
+        }
+    }
+    .swiper-button-prev, .swiper-button-next {
+        bottom: 50% !important;
+        &::after{
+            font-size: 24px !important;
+        }
+    }
+    .swiper-button-next {
+        right: 0px !important;
+    }
+    .swiper-button-prev{
+        left: 0px !important;
+    }
+    .swiper .slider {
+        height: 100vh;
+    }
+    .slider_info{
+        flex-direction: column;
+    }
+    .Main_slider img {
+        display: none;
+    }
+    .slider_info_img{
+        position: relative;
+    }
+    .slider_info_img img{
+        display: block;
+        position: absolute;
+        width: 80% !important;
+        height: 80% !important;
+        bottom: 0px;
+        left: 25px;
+    }
+    .swiper .slider_info_img {
+        width: 50%;
+        height: 245px;
+    }
+    .slider_info_text {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .swiper{
+        .slider_info_text_star {
+            align-items: flex-end !important;
+            &_svg svg {
+                width: 1rem;
+                height: 1rem;
+                margin-right: 10px;
+            }
+            &_Num h4 {
+                font-size: 1.2rem;
+                font-weight: 600;
+                margin-bottom: 0px;
+            }
+        }
+        .slider_info_text_name h2 {
+            font-size: 1.6rem;
+            margin: 10px 0px 0px 0px;
+        }
+        .slider_info_text_discount{
+            display: none;
+        }
+        .slider_info_text_price{
+            margin-top: 0.3rem !important;
+            flex-direction: column;
+            .discountPrice{
+                font-size: 2.3rem !important;
+            }
+            .price{
+                margin: 0px auto !important;
+                font-size: 1.5rem !important;
+            }
+        }
+        .slider_info_text_button{
+            justify-content: space-between !important;
+            width: 70%;
+            margin-top: 0.5rem !important;
+            .infoBoutton{
+                margin: 0px!important;
+            }
+        }
+    }
+}
